tests/ui/array-slice-vec/vec-macro-with-comma-only.rs
pub fn main() {
    vec![,]; //~ ERROR no rules expected `,`
}
